Make readme explicit

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ MAINTENANCE_MESSAGE="Okay faithful users...we're attempting to restore an older 
 
 SITE_NAME=forums
 SITE_LANGUAGE=english
-SITE_URL=https://staging.wetfishonline.com
+
+# These sites are expected to live at your.url/forum, please make sure your url has the correct structure
+SITE_URL=https://staging.wetfishonline.com/forum
 
 OUTGOING_EMAIL=noreply@yourdomain.com
