Fix paths so /forum works and is redirected to by default

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -6,7 +6,12 @@ server {
      access_log /var/log/nginx/access.log;
      
      root /var/www;
-    
+     location /forum/ { }
+   
+     location = / {
+	rewrite ^/(.*)$ /forum/$1 redirect;
+     }
+
      location ~ \.php$ {
          try_files $uri  =404;
          fastcgi_split_path_info ^(.+\.php)(/.+)$;
