--- a/forum/Dockerfile
+++ b/forum/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y \
 	&& docker-php-ext-install calendar exif gd gettext mysql mysqli pdo_mysql
 
 RUN useradd fishy
-COPY --chown=fishy:fishy . /var/www/
+COPY --chown=fishy:fishy . /var/www/forum
 
 USER fishy
 
