--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,94 +1,69 @@
-version: '3'
+# version 3+ does different things re: networking from 2.x
+# mainly things to support swarms
+# aka things we don't need/want
+version: '2.4'
 services:
-
-  #PHP Service
-  forum:
-    image: ghcr.io/wetfish/online:latest
-    container_name: forum-php
+  online-web:
+    image: docker.io/nginx:1.23-alpine
+    container_name: online-web
     restart: unless-stopped
-    tty: true
-    working_dir: /var/www/forum
-    env_file:
-      - ./.env
     volumes:
-      - ./forum:/var/www/forum
-      - ./utils:/var/www/utils
-      - ./config/php.ini:/usr/local/etc/php/conf.d/settings.ini
-      - ./config/php.conf:/usr/local/etc/php-fpm.d/zz-php.conf
-    networks:
-      - forum-network
-    depends_on:
-      - db
-
-  webserver:
-    image: docker.io/nginx:alpine
-    container_name: forum-nginx
-    restart: unless-stopped
-    ports: 
-      - "80:80"
-    volumes:
-      - ./forum:/var/www/forum
+      - ./wwwroot:/var/www/forum
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
+    # uncomment to expose port directly
+    # normally behind centeral traefik defined in production-manifests/services/traefik
+    # ports:
+    #   - "80:80"
+
+    # join danger-internal and traefik-backend networks
+    # comment out the traefik lines here and in the networks: stanza below
+    # if you uncomment the port exposure above
     networks:
-      - forum-network
-    depends_on:
-      - db
-      - forum
-
-  ##SSL-enabled Nginx Service; uncomment to use
-  ##Make sure to comment out the above webserver block
-  #webserver:
-  #  image: ghcr.io/linuxserver/swag
-  #  container_name: swag
-  #  restart: unless-stopped
-  #  environment:
-  #    PUID: 1000
-  #    PGID: 1000
-  #    TZ: $TIMEZONE
-  #    URL: $SITE_URL
-  #    SUBDOMAINS: $SUBDOMAINS
-  #    ONLY_SUBDOMAINS: $ONLY_SUBDOMAINS
-  #    VALIDATION: http
-  #    EMAIL: $EMAIL # optional
-  #  ports:
-  #    - "80:80"
-  #    - "443:443"
-  #  volumes:
-  #    - ./swag/site-confs:/config/nginx/site-confs
-  #    - ./swag/fastcgi_params:/config/nginx/fastcgi_params
-  #    - ./laravel/:/config/www
-  #    - config:/config
-  #  networks:
-  #    - forum-network
-  #  depends_on:
-  #    - db
-  #    - forum 
-
-  # MySQL Service
-  db:
-    image: docker.io/mariadb
-    container_name: forum-mysql
+      online-internal: {}
+      traefik-backend: {}
+  
+  online-php:
+    # production: track "prod" tag on ghcr.io
+    # image: ghcr.io/wetfish/online:prod
+    # for development, build the image
+    # TODO: once ghcr.io autobuilds in place, change this
+    build: .
+    container_name: online-php
     restart: unless-stopped
-    command: --sql_mode=""
-    environment:
-      MYSQL_ROOT_PASSWORD: $DB_PASSWORD
-      MYSQL_DATABASE: $DB_DATABASE 
-      MYSQL_USER: $DB_USERNAME 
-      MYSQL_PASSWORD: $DB_PASSWORD
+    env_file:
+      - ./php.env
+    volumes:
+      - ./wwwroot:/var/www/forum
+      - ./utils:/var/www/utils
+      - ./config/php.ini:/usr/local/etc/php/conf.d/settings.ini:ro
+      - ./config/php.conf:/usr/local/etc/php-fpm.d/zz-php.conf:ro
+    networks:
+      online-internal: {}
+
+  online-db:
+    image: docker.io/mariadb:10.10
+    container_name: online-db
+    restart: unless-stopped
+    env_file:
+      - ./mariadb.env
+    # built-in healthcheck script
+    healthcheck:
+      test: ["healthcheck.sh", "--su=mysql", "--connect", "--innodb_initialized"]
+      interval: 60s
+      timeout: 5s
+      retries: 5
     volumes:
       - ./config/docker.sql:/docker-entrypoint-initdb.d/setup.sql
-      - dbdata:/var/lib/mysql
+      - ./db/data:/var/lib/mysql
     networks:
-      - forum-network
+      online-internal: {}
 
-#Docker Networks
+
 networks:
-  forum-network:
+  # ephemeral, created for us by compose
+  online-internal:
     driver: bridge
+  # persistent, externally created
+  traefik-backend:
+    external: true
 
-#Volumes
-volumes:
-    dbdata:
-      driver: local
-    node_modules:
-      driver: local
