rewrite dockerfile, fix autobuild manifest, update git/dockerignore files, update php.env.example from actual

--- a/php.env.example
+++ b/php.env.example
@@ -1,3 +1,4 @@
+DB_HOSTNAME=online-db
 DB_PASSWORD=secret
 DB_DATABASE=forums
 DB_USERNAME=forums
@@ -7,10 +8,15 @@ MAINTENANCE_MODE=0
 MAINTENANCE_TITLE="Maintenance Mode"
 MAINTENANCE_MESSAGE="Okay faithful users...we're attempting to restore an older backup of the database...news will be posted once we're back"
 
-SITE_NAME=forums
+SITE_NAME=Online
 SITE_LANGUAGE=english
 
 # These sites are expected to live at your.url/forum, please make sure your url has the correct structure
-SITE_URL=https://staging.wetfishonline.com/forum
+SITE_URL=https://wetfishonline.com/forum
 
-OUTGOING_EMAIL=noreply@yourdomain.com
+OUTGOING_EMAIL=noreply@wetfishonline.com
+
+# Online-specific bits
+FORUM_NAME=Wetfish Online
+FORUM_LANGUAGE=english
+FORUM_URL=https://wetfishonline.com/forum
