--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -9,13 +9,13 @@ server {
      location /forum/ { }
    
      location = / {
-	rewrite ^/(.*)$ /forum/$1 redirect;
+	     rewrite ^/(.*)$ /forum/$1 redirect;
      }
 
      location ~ \.php$ {
          try_files $uri  =404;
          fastcgi_split_path_info ^(.+\.php)(/.+)$;
-         fastcgi_pass forum:9000;
+         fastcgi_pass online-php:9000;
          fastcgi_index index.php;
          include fastcgi_params;
          fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
