add sendmail to image, fix db connection envvars, add php error log to gitignore

--- a/php.env.example
+++ b/php.env.example
@@ -1,7 +1,7 @@
-DB_HOSTNAME=online-db
-DB_PASSWORD=secret
-DB_DATABASE=forums
-DB_USERNAME=forums
+DB_HOST="online-db"
+DB_DATABASE="forums"
+DB_USERNAME="forums"
+DB_PASSWORD="secret"
 
 # Set to 1 to enable maintenance mode, 2 to make it immutable
 MAINTENANCE_MODE=0
