--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,15 +12,11 @@ services:
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
     # uncomment to expose port directly
     # normally behind centeral traefik defined in production-manifests/services/traefik
-    # ports:
-    #   - "80:80"
-
-    # join online-internal and traefik-backend networks
-    # comment out the traefik lines here and in the networks: stanza below
-    # if you uncomment the port exposure above
+    ports:
+      - "127.0.0.1:80:80"
+    # join online-internal network
     networks:
       online-internal: {}
-      traefik-backend: {}
   
   online-php:
     # production: track "prod" tag on ghcr.io
@@ -63,7 +59,3 @@ networks:
   # ephemeral, created for us by compose
   online-internal:
     driver: bridge
-  # persistent, externally created
-  traefik-backend:
-    external: true
-
