--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,7 +10,6 @@ services:
     volumes:
       - ./wwwroot:/var/www/forum
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
-    # uncomment to expose port directly
     # normally behind centeral traefik defined in production-manifests/services/traefik
     ports:
       - "127.0.0.1:80:80"
@@ -19,10 +18,8 @@ services:
       online-internal: {}
   
   online-php:
-    # production: track "prod" tag on ghcr.io
-    # image: ghcr.io/wetfish/online:prod
     # for development, build the image
-    # TODO: once ghcr.io autobuilds in place, change this
+    image: ghcr.io/wetfish/online:dev
     build: .
     container_name: online-php
     restart: unless-stopped
