--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,6 @@ services:
     volumes:
       - ./wwwroot:/var/www/forum
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
-    # uncomment to expose port directly
-    # normally behind centeral traefik defined in production-manifests/services/traefik
-    # ports:
-    #   - "80:80"
-
     # join online-internal and traefik-backend networks
     # comment out the traefik lines here and in the networks: stanza below
     # if you uncomment the port exposure above
@@ -24,10 +19,7 @@ services:
   
   online-php:
     # production: track "prod" tag on ghcr.io
-    # image: ghcr.io/wetfish/online:prod
-    # for development, build the image
-    # TODO: once ghcr.io autobuilds in place, change this
-    build: .
+    image: ghcr.io/wetfish/online:prod
     container_name: online-php
     restart: unless-stopped
     env_file:
