--- a/php.env.example
+++ b/php.env.example
@@ -1,7 +1,7 @@
-DB_HOST="online-db"
-DB_DATABASE="forums"
-DB_USERNAME="forums"
-DB_PASSWORD="secret"
+DB_HOST=online-db
+DB_DATABASE=forums
+DB_USERNAME=forums
+DB_PASSWORD=supersecret
 
 # Set to 1 to enable maintenance mode, 2 to make it immutable
 MAINTENANCE_MODE=0
@@ -12,6 +12,9 @@ SITE_NAME=Online
 SITE_LANGUAGE=english
 
 # These sites are expected to live at your.url/forum, please make sure your url has the correct structure
-SITE_URL=https://wetfishonline.com/forum
+#SITE_URL=https://wetfishonline.com/forum
+
+# dev env
+SITE_URL=http://wetfishonline.com.local:2404/forum
 
 OUTGOING_EMAIL=noreply@wetfishonline.com
