--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,10 @@
 version: '2.4'
 services:
   online-web:
-    image: docker.io/nginx:1.23-alpine
+    image: ghcr.io/wetfish/online:prod-nginx
     container_name: online-web
     restart: unless-stopped
     volumes:
-      - ./wwwroot:/var/www/forum
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
     # join online-internal and traefik-backend networks
     # comment out the traefik lines here and in the networks: stanza below
@@ -19,16 +18,15 @@ services:
   
   online-php:
     # production: track "prod" tag on ghcr.io
-    image: ghcr.io/wetfish/online:prod
+    image: ghcr.io/wetfish/online:prod-php
     container_name: online-php
     restart: unless-stopped
     env_file:
       - ./php.env
     volumes:
-      - ./wwwroot:/var/www/forum
-      - ./utils:/var/www/utils
-      - ./config/php.ini:/usr/local/etc/php/conf.d/settings.ini:ro
-      - ./config/php.conf:/usr/local/etc/php-fpm.d/zz-php.conf:ro
+      - ./config/php-fpm.conf:/etc/php/5.6/fpm/php-fpm.conf:ro
+      - ./config/php-fpm-pool.conf:/etc/php/5.6/fpm/pool.d/www.conf:ro
+      - ./config/php.ini:/etc/php/5.6/fpm/php.ini:ro
     networks:
       online-internal: {}
 
@@ -38,18 +36,11 @@ services:
     restart: unless-stopped
     env_file:
       - ./mariadb.env
-    # built-in healthcheck script
-    healthcheck:
-      test: ["healthcheck.sh", "--su=mysql", "--connect", "--innodb_initialized"]
-      interval: 60s
-      timeout: 5s
-      retries: 5
     volumes:
       - ./config/docker.sql:/docker-entrypoint-initdb.d/setup.sql
       - ./db/data:/var/lib/mysql
     networks:
       online-internal: {}
-
 
 networks:
   # ephemeral, created for us by compose
