--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,6 +12,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./wwwroot:/var/www/forum
+      - ./storage/fish:/var/www/forum/fish
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
     # normally behind centeral traefik defined in production-manifests/services/traefik
     ports:
@@ -32,6 +33,7 @@ services:
       - ./php.env
     volumes:
       - ./wwwroot:/var/www/forum
+      - ./storage/fish:/var/www/forum/fish
       # php-fpm configs
       - ./config/php-fpm.conf:/etc/php/5.6/fpm/php-fpm.conf:ro
       - ./config/php-fpm-pool.conf:/etc/php/5.6/fpm/pool.d/www.conf:ro
@@ -43,6 +45,7 @@ services:
     image: docker.io/mariadb:10.10
     container_name: online-db
     restart: unless-stopped
+    command: --sql_mode=""
     env_file:
       - ./mariadb.env
     volumes:
