--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "com.centurylinklabs.watchtower.enable=true"
     restart: unless-stopped
     volumes:
+      - ./storage/fish:/var/www/forum/fish
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
     # join online-internal and traefik-backend networks
     # comment out the traefik lines here and in the networks: stanza below
@@ -28,6 +29,7 @@ services:
     env_file:
       - ./php.env
     volumes:
+      - ./storage/fish:/var/www/forum/fish
       - ./config/php-fpm.conf:/etc/php/5.6/fpm/php-fpm.conf:ro
       - ./config/php-fpm-pool.conf:/etc/php/5.6/fpm/pool.d/www.conf:ro
       - ./config/php.ini:/etc/php/5.6/fpm/php.ini:ro
@@ -38,6 +40,7 @@ services:
     image: docker.io/mariadb:10.10
     container_name: online-db
     restart: unless-stopped
+    command: --sql_mode=""
     env_file:
       - ./mariadb.env
     volumes:
