--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,6 +13,8 @@ services:
     volumes:
       - ./wwwroot:/var/www/forum
       - ./storage/fish:/var/www/forum/fish
+      - ./storage/cache:/var/www/forum/cache:ro
+      - ./storage/themes:/var/www/forum/Themes:ro
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
     # normally behind centeral traefik defined in production-manifests/services/traefik
     ports:
@@ -33,7 +35,9 @@ services:
       - ./php.env
     volumes:
       - ./wwwroot:/var/www/forum
-      - ./storage/fish:/var/www/forum/fish
+      - ./storage/fish:/var/www/forum/fish:rw
+      - ./storage/cache:/var/www/forum/cache:rw
+      - ./storage/themes:/var/www/forum/Themes:ro
       # php-fpm configs
       - ./config/php-fpm.conf:/etc/php/5.6/fpm/php-fpm.conf:ro
       - ./config/php-fpm-pool.conf:/etc/php/5.6/fpm/pool.d/www.conf:ro
