--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
-# version 3+ does different things re: networking from 2.x
-# mainly things to support swarms
-# aka things we don't need/want
-version: '2.4'
+version: "2.4"
 services:
   online-web:
-    image: ghcr.io/wetfish/online:prod-nginx
+    image: ghcr.io/wetfish/online:${ENV_TAG}-nginx # Use the ENV_TAG variable for dynamic image selection
     container_name: online-web
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
@@ -13,16 +10,12 @@ services:
       - ./storage/fish:/var/www/forum/fish:ro
       - ./storage/cache:/var/www/forum/cache:ro
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    # join online-internal and traefik-backend networks
-    # comment out the traefik lines here and in the networks: stanza below
-    # if you uncomment the port exposure above
     networks:
       online-internal: {}
       traefik-backend: {}
-  
+
   online-php:
-    # production: track "prod" tag on ghcr.io
-    image: ghcr.io/wetfish/online:prod-php
+    image: ghcr.io/wetfish/online:${ENV_TAG}-php # Dynamically set PHP image tag
     container_name: online-php
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
@@ -51,10 +44,6 @@ services:
     networks:
       online-internal: {}
 
-
-  # watchtower - automatically pull new container images
-  # note: this does not update the repo
-  # if deployment files have changed you will need to git pull && docker compose up -d manually
   online-watchtower:
     image: ghcr.io/containrrr/watchtower:1.5.3
     container_name: online-watchtower
@@ -67,9 +56,7 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
 
 networks:
-  # ephemeral, created for us by compose
   online-internal:
     driver: bridge
-  # persistent, externally created
   traefik-backend:
     external: true
